test/interaction/Issue7034.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : SSet" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue7034.agda:16.7-18: error: [UnequalTerms] (y : A) → ?1 (y = y) != A of type SSet when checking that the expression (y : A) → ? has type SSet" nil)
((last . 3) . (agda2-maybe-goto '("Issue7034.agda" . 358)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
